Fix header not showing

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -186,7 +186,7 @@
   }
 
   .header-item {
-    background: url("header.jpg");
+    background: image-url("header.jpg");
     background-size: cover;
     background-position: 50% 50%;
     .panel{
